@startuml Eventia-Classes-Client
title Diagramme de classes - Service Client
skinparam classAttributeIconSize 0
hide empty members

package "Service Client" {

  class ClientController {
    - service : ClientService
    + ClientController(service)
    + list(req, res, next)
    + getById(req, res, next)
    + create(req, res, next)
    + update(req, res, next)
    + remove(req, res, next)
  }

  class ClientService {
    - repository : ClientRepository
    + ClientService(repository)
    + list() : Promise<Object[]>
    + getById(id) : Promise<Object>
    + create(data) : Promise<Object>
    + update(id, data) : Promise<Object>
    + remove(id) : Promise<boolean>
  }

  class ClientRepository {
    - model : Model
    + ClientRepository(model)
    + {static} isValidId(id) : boolean
    + findAll() : Promise<Document[]>
    + findById(id) : Promise<Document>
    + findByEmail(email) : Promise<Document>
    + create(data) : Promise<Document>
    + update(id, data) : Promise<Document>
    + deleteById(id) : Promise<Document>
  }

  class Client {
    + {static} EMAIL_PATTERN : RegExp
    + {static} MIN_PHONE_LENGTH : number
    + id : string
    + name : string
    + email : string
    + phone : string
    + createdAt : Date
    + updatedAt : Date
    + Client(data)
    + {static} fromDocument(document) : Client
    - {static} clean(value) : string
    + validate() : ValidationResult
    + isValid() : boolean
    + toPersistence() : Object
    + toJSON() : Object
  }
}

class AppError {
  + statusCode : number
  + details : any
}
class ValidationError
class NotFoundError
class ConflictError
AppError <|-- ValidationError
AppError <|-- NotFoundError
AppError <|-- ConflictError

ClientController "1" --> "1" ClientService : utilise
ClientService "1" --> "1" ClientRepository : utilise
ClientService "1" ..> "0..*" Client : cree et valide
ClientRepository "1" ..> "0..*" Client : persiste
ClientService ..> ValidationError
ClientService ..> NotFoundError
ClientService ..> ConflictError

note right of Client
  Regles intrinseques :
  nom, courriel et telephone obligatoires,
  courriel au format local@domaine.tld
  et normalise en minuscules.
end note
note right of ClientService
  L'unicite du courriel est une regle
  applicative : elle exige une consultation
  du depot.
end note
@enduml
